syntax = "proto3";
package com.satvik.grpclearn;

option java_multiple_files = true;

service TodoService{
  rpc createTodo(TodoItem) returns (TodoItem);
  rpc getTodos(NoParams) returns (TodoItems);
  rpc getTodosStream(NoParams) returns (stream TodoItem);
}

message NoParams{}

message TodoItem {
  int32 id = 1;
  string text = 2;
}

message TodoItems {
  repeated TodoItem items = 1;
}
